# test_bazel

./: .gitignore  BUILD  MODULE.bazel  README
src/example_cpp/: BUILD  hello_lib.cpp  hello_lib.h  hello_world.cpp  test_hello.cpp
src/example_python/: BUILD  hello_lib.py  hello_world.py  requirements_lock.txt  test_hello.py
