###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "rules_python", version = "0.33.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    # We can specify the exact version.
    python_version = "3.10.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
  python_version = "3.10.12", # Mandatory
  hub_name = "pip_deps",
  requirements_lock = "//src/example_python:requirements_lock.txt"
)
use_repo(pip, "pip_deps")
